# jamesneedsdata

./: README.md  jamesneedsdata.py  pyproject.toml  sample.env  western_states-sample.csv
